# ivnse

./: .env.example  Dockerfile  README.md  app.py  docker-compose.yml  prd.md  prd_task.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  supported_fmp_tickers.py
.github/: copilot-instructions.md
.streamlit/: config.toml
docs/: architecture.md  developer_guide.md
ivnse/: app.py  core.py
ivnse.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ivnse/.github/workflows/: ci.yml
ivnse/assets/: ivnse.css
ivnse/data/: alphavantage.py  base.py  factory.py  nsepy_provider.py
ivnse/models/: __init__.py  dcf.py
ivnse/pages/: dashboard.py  peers.py  reports.py  scenario_lab.py  valuation.py
ivnse/services/: fmp_api.py
ivnse/tests/: test_valuation.py
ivnse/ui/: home.py
ivnse/ui_components/: cards.py  nav.py
pages/: .keep  dashboard.py  peers.py  reports.py  scenario_lab.py  valuation.py
tests/: test_alpha.py
tests/unit/data/: test_alphavantage.py
tests/unit/models/: test_dcf.py
