[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ivnse"
version = "0.1.0"
description = "Intrinsic-value engine with Streamlit UI"
authors = [{ name = "Arup Roy", email = "..." }]
requires-python = ">=3.10"
dependencies = [
  "streamlit>=1.28",
  "pandas",
  "yfinance",
  "plotly",
  "openpyxl"
]

[project.optional-dependencies]
dev = ["pytest", "black", "isort", "pyright"]

[tool.setuptools.packages.find]
where = ["."]
