[metadata]
name = ivnse
version = 0.1.0
description = Intrinsic Value Calculator for NSE stocks
author = Your Name
author_email = your@email.com
url = https://github.com/yourname/ivnse

[options]
packages = find:
install_requires =
    streamlit
    pandas
    yfinance
    requests
    plotly
    openpyxl
    streamlit-option-menu
    streamlit-elements
python_requires = >=3.9

[options.package_data]
* = *.md, *.txt
